# hw_django_basketball

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
accounts/: admin.py  backends.py  forms.py  managers.py  models.py  urls.py  views.py
config/: settings.py  urls.py
players/: admin.py  forms.py  models.py  urls.py  views.py
players/migrations/: 0001_initial.py  0002_alter_match_options_match_is_finished.py  0003_matchstatistics_alter_match_options_and_more.py  0004_alter_matchstatistics_time_played.py  0005_match_time.py  0006_match_place.py  0007_alter_player_number.py  0008_alter_player_birth_date_alter_player_height_and_more.py  0009_alter_matchstatistics_assist_and_more.py
players/templatetags/: age_filters.py
static/css/: reset.css  style.css
templates/: base.html  home.html
templates/accounts/: login.html  me.html  register.html
templates/inner/: header.html  pagination.html
templates/players/: match_list.html  player_stat.html  team_detail.html  team_list.html
