[tool.poetry]
name = "hw-django-blog"
version = "0.1.0"
description = ""
authors = ["Ivan <omg.dayz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
